apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: apps
spec:
  selector:
    app: linkding
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
