apps/linkding/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: linkding.192.168.1.147.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
